Enhance batch expiry and notification logic
Refactored and expanded notification triggers for batch creation, depletion, expiry, and quarantine events. Improved expiry tracking and reporting logic, added new repository methods for batch status and expiry queries, and ensured notifications are sent to relevant user roles. Updated async configuration and streamlined service dependencies with @Autowired. Enhanced helper methods and error handling for notification delivery.